bugfix/CIR-319 - Limit WordPress spacer block max height
This constrains `wp-block-spacer` elements to a maximum height, preventing them from introducing excessive vertical spacing that could contribute to layout issues or content overlap.

--- a/app/assets/scss/components/miscellaneous/index.scss
+++ b/app/assets/scss/components/miscellaneous/index.scss
@@ -104,6 +104,10 @@
   }
 }
 
+.wp-block-spacer {
+  max-height: 50px !important;
+}
+
 .wp-block-image {
   img {
     max-width: 100%;
